--- a/index.html
+++ b/index.html
@@ -33,15 +33,9 @@
 
       <!-- Menu Link -->
       <ul class="menu-right">
-        <li><a href="index.html">
-          Home
-        </a></li>
-        <li><a href="#about">
-          About
-        </a></li>
-        <li><a href="contact.html">
-          Contact
-        </a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#about">About</a></li>
+      <li><a href="#cv">CV</a></li>
       </ul>
     </div>
   </header>
@@ -84,11 +78,11 @@
   <br><br><br>
   </section>
   <!-- Page Banner -->
-  <section>
+  <section id="cv">
     <div class="page-banner" data-aos="fade-right">
       <h1>VIVMMI - Apriansyah Rizqi S.</h1>
       <h3>Kecamatan Kejaksan, Kota Cirebon - Jawa Barat.</h3>
-      <a href="https://drive.google.com/file/d/1WrBYCCws4pE27Kt4y97UXNTH4IjThaxG/view?usp=sharing" target="_blank">Download My CV</a>
+      <a href="cv/index.html" target="_blank">Go To CV</a>
     </div>
   </section>
 
