--- a/kartunama.htm
+++ b/kartunama.htm
@@ -171,7 +171,7 @@ border: 1px solid #ffffff;margin-top:90px;height: 200px" src="https://sintala.ke
 
   </div>
   <div class="card_right">
-  <img src="https://sintala.kemnaker.go.id/assets/uploads/logo/96e8b-kemnaker-copy.png" style="width:100px;right:15px;position:absolute;top:15px">
+  <img src="https://api.qr-code-generator.com/v1/create?access-token=PFvJRpSSlKCB-chjbdbwGMQLlCntvGOeCzrBNyt0pclkicsKoqsO5FEJXNIIylvR&frame_name=no-frame&image_format=PNG&image_width=500&qr_code_id=13046041&rnd=1580271206180" style="width:100px;right:15px;position:absolute;top:15px">
     <div style="background: white; height: 110px;position: absolute;bottom: 30;width: 60%;">
 	
       <table style="width: 100%">
