--- a/kartunama.htm
+++ b/kartunama.htm
@@ -177,7 +177,7 @@ border: 1px solid #ffffff;margin-top:90px;height: 200px" src="https://sintala.ke
       <table style="width: 100%">
         <tbody><tr>
           <td style="width: 100px">
-             <img style="width: 100px;" src="https://api.qr-code-generator.com/v1/create?access-token=PFvJRpSSlKCB-chjbdbwGMQLlCntvGOeCzrBNyt0pclkicsKoqsO5FEJXNIIylvR&frame_name=no-frame&image_format=PNG&image_width=500&qr_code_id=13046041&rnd=1580271206180">
+             <img style="width: 100px;" src="https://qrco.de/qrC0d3">
           </td>
           <td>
             Alamat : Jl. Kembang Gg. VI No. 333 Rt/Rw 04/04 Kel. Sukapura Kec. Kejaksan Kota Cirebon<br>
